chimera may be caused by protocol

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -12,7 +12,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.5-r46)}
+\title{The SAM Format Specification (v1.5-r47)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -110,7 +110,7 @@ r001   83 ref 37 30 9M         =  7 -39 CAGCGGCAT         * NM:i:1
 \end{description}
 
 \footnotetext[1]{A chimeric alignment is primarily caused by structural
-variations, gene fusions, misassemblies or RNA-seq. It is more frequent given longer
+variations, gene fusions, misassemblies, RNA-seq or experimental protocols. It is more frequent given longer
 reads. For a chimeric alignment, its canonical components are largely
 non-overlapping; each canonical alignment may have high mapping quality and is
 informative in SNP/INDEL calling. A read may also have \emph{multiple mappings}
