changed the definition of "segment"

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -12,7 +12,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.5-r47)}
+\title{The SAM Format Specification (v1.5-r48)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -69,8 +69,7 @@ r001   83 ref 37 30 9M         =  7 -39 CAGCGGCAT         * NM:i:1
 \item[Template] A DNA/RNA sequence part of which is sequenced on a
   sequencing machine or assembled from raw sequences.
 
-\item[Segment] A contiguous (sub)sequence on a template which is
-  sequenced or assembled.
+\item[Segment] A contiguous sequence or subsequence.
 
 \item[Read] A raw sequence that comes off a sequencing machine. A read
   may consist of multiple segments. For sequencing data, reads are indexed by
