Update to renamed repository URL
(We've lied about the author date on this commit so as to leave the
date as the last substantive textual change to SAMv1.tex.)

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -22,7 +22,7 @@
 \maketitle
 \begin{quote}\small
 The master version of this document can be found at
-\url{https://github.com/samtools/sam-spec}.
+\url{https://github.com/samtools/hts-specs}.
 This printing is version~\commitdesc\ from that repository,
 last modified on the date shown above.
 \end{quote}
