Note that BCF1 is obsolete

--- a/BCFv1_qref.tex
+++ b/BCFv1_qref.tex
@@ -9,6 +9,11 @@
 \setlength{\columnsep}{0.6cm}
 
 \begin{document}
+\noindent
+[This is a quick reference for {\bf BCF1}, as historically implemented
+in Samtools.  The BCF1 format is obsolete; BCF2 is widely implemented and
+recommended for use instead of this legacy format.]
+\vspace{1\baselineskip}
 
 \begin{center}
 \begin{tabular}{|l|l|l|l|l|}
