fix syntax of ##SAMPLE line in example

--- a/VCFv4.1.tex
+++ b/VCFv4.1.tex
@@ -810,7 +810,7 @@ It may be extremely difficult to obtain clinically perfect samples, with only on
 \footnotesize
 \begin{verbatim}
 ##SAMPLE=<ID=Blood,Genomes=Germline,Mixture=1.,Description="Patient germline genome">
-##SAMPLE=<ID=TissueSample,Genomes=Germline;Tumor,Mixture=.3,.7,Description="Patient germline genome;Patient tumor genome">
+##SAMPLE=<ID=TissueSample,Genomes=Germline;Tumor,Mixture=.3;.7,Description="Patient germline genome;Patient tumor genome">
 \end{verbatim}
 \normalsize
 
