--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -425,7 +425,7 @@ may be changed if the new type is also compatible with the array.
   {\tt BC} & Z & Barcode sequence, with any quality scores stored in the {\tt QT} tag. \\
   {\tt BQ} & Z & Offset to base alignment quality (BAQ), of the same length as the read sequence.
   At the $i$-th read base, ${\rm BAQ}_i=Q_i-({\rm BQ}_i-64)$ where $Q_i$ is the $i$-th base quality. \\
-  {\tt CC} & Z & Reference name of the next hit; "=" for the same chromosome \\
+  {\tt CC} & Z & Reference name of the next hit; `{\tt =}' for the same chromosome \\
   {\tt CM} & i & Edit distance between the color sequence and the color reference (see also {\tt NM})\\
   {\tt CO} & Z & Free-text comments \\
   {\tt CP} & i & Leftmost coordinate of the next hit \\ 
@@ -703,7 +703,7 @@ use of {\sf GZIPInputStream} on a BGZF file will not work due to this
 bug.}.
 
 A BGZF archive is a series of concatenated BGZF blocks. Each BGZF block
-is itself a spec-compliant gzip archive which contains an "extra field"
+is itself a spec-compliant gzip archive which contains an ``extra field''
 in the format described in RFC1952. The gzip file format allows the
 inclusion of application-specific extra fields and these are ignored by
 compliant decompression implementation. The gzip specification also
